revops-lab/main/default/objects/Sales_ERP_Setting__mdt/Sales_ERP_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Endpoint path, timeout and retry policy for the lab ERP order push. Credentials live in the Named Credential, never here.</description>
    <label>Sales ERP Setting</label>
    <pluralLabel>Sales ERP Settings</pluralLabel>
</CustomObject>