revops-lab/main/default/objects/Sales_ERP_Setting__mdt/fields/Orders_Path__c.field-meta.xml
<CustomField>
    <fullName>Orders_Path__c</fullName>
    <label>Orders Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>