revops-lab/main/default/objects/Sales_ERP_Setting__mdt/fields/Retry_Base_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Retry_Base_Minutes__c</fullName>
    <label>Retry Base (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>