revops-lab/main/default/objects/Sales_ERP_Setting__mdt/fields/Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Ms__c</fullName>
    <label>Timeout (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>